# road-pal

./: .env.example  .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  system_prompt.txt
data/: bom_condutor.md
notebooks/ingestion/: _utils.py  ingestion.ipynb
src/: constants.py
